# mobile_gpu_gemm

./: .gitignore  README.md
adreno_gpu_opencl_l0/: CMakeLists.txt  build.sh
adreno_gpu_opencl_l0/src/: gemm_bib_nn.cpp  gemm_bib_nn_m4n8.cpp  gemm_ibb_nn.cpp  gemm_iib_nn.cpp  gemm_iib_tn.cpp  gemm_iib_tn_v0.cpp  gemm_iii_nn.cpp  readme.md
utils/: mem_helper.h
